--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib
-mediapipe
-numpy
-opencv-python
-pandas
-scikit-learn
+matplotlib==3.5.1
+mediapipe==0.8.9.1
+numpy==1.22.2
+opencv-python==4.5.5.62
+pandas==1.4.0
+scikit-learn==1.0.2
